[gd_scene load_steps=28 format=2]

[ext_resource path="res://src/white.png" type="Texture" id=1]
[ext_resource path="res://src/main.gd" type="Script" id=2]
[ext_resource path="res://src/background.png" type="Texture" id=3]
[ext_resource path="res://src/moros/moros(320x320).png" type="Texture" id=4]
[ext_resource path="res://src/debug.gd" type="Script" id=5]
[ext_resource path="res://src/moros/moros.png" type="Texture" id=6]
[ext_resource path="res://src/menubar.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.282353, 0.282353, 0.282353, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.117647, 0.117647, 0.117647, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.203922, 0.203922, 0.203922, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0.176471, 0.866667, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0196078, 0, 0.101961, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.00392157, 0, 0.392157, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.26416, 0.26416, 0.26416, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.215686, 0.215686, 0.215686, 1 )

[sub_resource type="Animation" id=14]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 7 ), Vector2( 92.4388, 9.33484 ) ]
}

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.0901961, 0, 0.501961, 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0, 0, 0, 1 )

[node name="Window" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBar" type="Control" parent="."]
margin_right = 515.0
margin_bottom = 18.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBar" type="Sprite" parent="TitleBar"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 255.048, 16.0908 )
scale = Vector2( 8.1265, 0.627836 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="TitleBar"]
position = Vector2( 253.538, 163.955 )
scale = Vector2( 0.826512, 0.584594 )
texture = ExtResource( 3 )

[node name="CloseButton" type="Button" parent="TitleBar"]
margin_left = 491.0
margin_top = -3.0
margin_right = 514.0
margin_bottom = 22.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinimizeButton" type="Button" parent="TitleBar"]
margin_left = 470.074
margin_top = -1.4054
margin_right = 490.074
margin_bottom = 21.5946
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="usr" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ver" type="OptionButton" parent="usr"]
margin_left = 11.5542
margin_top = 250.964
margin_right = 145.554
margin_bottom = 287.964
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Version"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="Button" parent="usr"]
margin_left = 406.087
margin_top = 246.347
margin_right = 456.087
margin_bottom = 270.347
rect_scale = Vector2( 2, 2 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Play"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="err" type="WindowDialog" parent="usr"]
margin_left = 183.0
margin_top = 142.0
margin_right = 354.0
margin_bottom = 226.0
custom_styles/panel = SubResource( 10 )
window_title = "An Error Has Occurred!"
resizable = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="usr/err"]
show_behind_parent = true
position = Vector2( 97.39, -8.24068 )
scale = Vector2( 2.98994, 0.391313 )
texture = ExtResource( 1 )

[node name="err" type="Label" parent="usr/err"]
margin_right = 193.0
margin_bottom = 84.0
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="img" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo" type="Sprite" parent="img"]
position = Vector2( 409.219, 62.8084 )
scale = Vector2( 0.281094, 0.281094 )
texture = ExtResource( 6 )

[node name="tools" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="debug" type="Label" parent="tools"]
margin_left = 1.0
margin_top = -1.0
margin_right = 280.0
margin_bottom = 27.0
script = ExtResource( 5 )

[node name="opt" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="options!" type="Label" parent="opt"]
margin_left = 224.266
margin_top = 25.8284
margin_right = 279.266
margin_bottom = 39.8284
text = "Options!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menubar" type="Control" parent="."]
margin_left = 2.0
margin_top = 7.0
margin_right = 43.0
margin_bottom = 10.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="arrow" type="Button" parent="menubar"]
margin_left = -5.0
margin_top = 10.3303
margin_right = 20.0
margin_bottom = 35.3303
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move" type="AnimationPlayer" parent="menubar"]
anims/move = SubResource( 14 )

[node name="bar" type="Control" parent="menubar"]
margin_right = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="base" type="Sprite" parent="menubar/bar"]
self_modulate = Color( 0.215686, 0.215686, 0.215686, 1 )
position = Vector2( -48.0542, 151.618 )
scale = Vector2( 1.39628, 4.45191 )
texture = ExtResource( 1 )

[node name="\?" type="Button" parent="menubar/bar"]
margin_left = -86.7818
margin_top = 264.345
margin_right = -63.7818
margin_bottom = 287.345
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
text = "?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="opt" type="Button" parent="menubar/bar"]
margin_left = -59.1639
margin_top = 263.455
margin_right = -8.16394
margin_bottom = 286.455
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="moros" type="Button" parent="menubar/bar"]
margin_left = -92.63
margin_top = 10.0
margin_right = -3.62996
margin_bottom = 53.0
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 19 )
custom_styles/normal = SubResource( 20 )
text = "Moros!"
icon = ExtResource( 4 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="TitleBar" to="." method="_on_TitleBar_gui_input"]
[connection signal="pressed" from="TitleBar/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="TitleBar/MinimizeButton" to="." method="_on_MinimizeButton_pressed"]
[connection signal="pressed" from="usr/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="menubar/arrow" to="menubar" method="_on_arrow_pressed"]
[connection signal="pressed" from="menubar/bar/?" to="menubar" method="_on_Button_pressed"]
[connection signal="pressed" from="menubar/bar/opt" to="." method="_on_opt_pressed"]
[connection signal="pressed" from="menubar/bar/moros" to="." method="_on_moros_pressed"]
